# barsmith

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: audit.toml
.github/workflows/: ci.yml  parity.yml  security.yml
barsmith_bench/: Cargo.toml
barsmith_bench/src/: cli.rs  compare.rs  main.rs  model.rs  runner.rs
barsmith_bench/src/suites/: bitset.rs  cli.rs  comb_depth.rs  comb_eval.rs  combinator.rs  mod.rs  stats.rs  target_generation.rs
barsmith_builtin/: Cargo.toml
barsmith_builtin/src/: lib.rs
barsmith_cli/: Cargo.toml
barsmith_cli/src/: cli.rs  eval_formulas.rs  main.rs  plot.rs  protocol_cmd.rs  results.rs  select.rs  standard_output.rs  target_semantics.rs
barsmith_cli/src/standard_output/: checksums.rs  closeout.rs  helpers.rs  plan.rs  records.rs  reports.rs
barsmith_cli/tests/: cli_smoke.rs  registry_schema.rs
barsmith_indicators/: Cargo.toml
barsmith_indicators/src/: comparisons.rs  kalman.rs  levels.rs  lib.rs  math.rs  moving_average.rs  oscillators.rs  patterns.rs  rolling.rs  volatility.rs
barsmith_rs/: Cargo.toml
barsmith_rs/src/: asset.rs  backtest.rs  batch_tuning.rs  benchmark.rs  bitset.rs  combinator.rs  config.rs  data.rs  feature.rs  formula.rs  formula_eval.rs  frs.rs  lib.rs  mask.rs  overfit.rs  pipeline.rs  progress.rs  protocol.rs  run_identity.rs  selection.rs  stats.rs  storage.rs  stress.rs  subset_pruning.rs
barsmith_rs/src/pipeline/: reporting.rs
barsmith_rs/src/stats/: metrics.rs  tests.rs
barsmith_rs/tests/: csv_fingerprint_consistency.rs  formula_eval.rs  pipeline_depth_reuse.rs  progress_tracker.rs  resume_bounds.rs  resume_catalog.rs  scalar_bounds_structure.rs  strict_min_and_comparison_pruning.rs  top_results.rs  unranking.rs
barsmith_rs/tests/fixtures/: formula_eval_formulas.txt  formula_eval_prepared.csv
benchmarks/: README.md  fixtures.example.toml
custom_rs/: Cargo.toml
custom_rs/src/: engineer.rs  features.rs  lib.rs  thresholds.rs
custom_rs/src/engineer/: backtest.rs  bench.rs  feature_blocks.rs  hashing.rs  io.rs  prepare.rs  targets.rs  tests.rs
custom_rs/src/engineer/feature_blocks/: candle.rs  derived.rs  oscillators.rs  price.rs  trend.rs  volatility.rs  warmup.rs
custom_rs/src/features/: audit.rs  definitions.rs  pairwise.rs  pruning.rs  series_kind.rs  tests.rs
custom_rs/src/targets/: README.md  TEMPLATE.md  mod.rs  registry.rs
custom_rs/src/targets/2x_atr_tp_atr_stop/: mod.rs
custom_rs/src/targets/3x_atr_tp_atr_stop/: mod.rs
custom_rs/src/targets/atr_tp_atr_stop/: mod.rs
custom_rs/src/targets/common/: attach.rs  barrier.rs  mod.rs
custom_rs/src/targets/common/barrier/: highlow.rs  next_bar.rs  resolution.rs  tick.rs
custom_rs/src/targets/common/barrier/highlow/: tests.rs
custom_rs/src/targets/highlow_1r/: mod.rs
custom_rs/src/targets/highlow_or_atr/: mod.rs
custom_rs/src/targets/highlow_or_atr_tightest_stop/: mod.rs
custom_rs/src/targets/highlow_sl_1x_atr_tp_rr_gt_1/: mod.rs
custom_rs/src/targets/highlow_sl_2x_atr_tp_rr_gt_1/: mod.rs
custom_rs/src/targets/next_bar_color_and_wicks/: mod.rs
custom_rs/src/targets/tribar_4h_2atr/: mod.rs
custom_rs/src/targets/wicks_kf/: mod.rs
custom_rs/tests/: catalog_order.rs  date_filtering_prepare.rs  desktop_indicator_parity.rs  pipeline_resume.rs  pipeline_smoke.rs  prepared_hash_guard.rs  tribar_target.rs
docs/: README.md  architecture.md  cli.md  data-contract.md  development.md  engines.md  migration.md  outputs.md  performance.md  quickstart.md  research-protocol.md  review-checklist.md  runs.md  selection.md  stability.md  targets.md  testing.md  troubleshooting.md  unsafe.md
runs/: README.md
runs/registry/: README.md
runs/registry/comb/2x_atr_tp_atr_stop/long/es_30m_official_v1/: pre_2024_12_31_refactor.json
scripts/: benchmark_smoke.sh  check_registry_schema.sh  check_stale_cli_flags.sh  golden_smoke.sh  performance_gate.sh  profile_es_pre2025.sh  run_parity_all.sh
