[workspace]
members = [
    "barsmith_rs",
    "barsmith_indicators",
    "barsmith_cli",
    "custom_rs",
    "barsmith_bench"
]
default-members = [
    "barsmith_rs",
    "barsmith_indicators",
    "barsmith_cli",
    "custom_rs"
]
resolver = "2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
