[package]
name = "barsmith_bench"
version = "0.1.0"
edition = "2024"
description = "Rust-native benchmark runner and regression gate for Barsmith."
license = "MIT"
repository = "https://github.com/latentedge/barsmith"
readme = "../README.md"
rust-version = "1.85.1"
publish = false

[dependencies]
anyhow = "1.0.102"
barsmith_rs = { path = "../barsmith_rs", features = ["bench-api", "simd-eval"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.6", features = ["derive"] }
hex = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11"
