[package]
name = "barsmith_builtin"
version = "0.1.0"
edition = "2024"
description = "Built-in minimal feature engineering and target labeling for Barsmith."
license = "MIT"
repository = "https://github.com/latentedge/barsmith"
readme = "../README.md"
rust-version = "1.85.1"
publish = false

[dependencies]
anyhow = "1.0.102"
barsmith_rs = { path = "../barsmith_rs" }
polars = { version = "0.53", default-features = false, features = ["dtype-slim", "strings", "temporal"] }
polars-io = { version = "0.53", default-features = false, features = ["csv", "temporal"] }
tracing = "0.1.44"
