[package]
name = "barsmith_cli"
version = "0.1.0"
edition = "2024"
description = "CLI for Barsmith: feature combination search over engineered OHLCV data."
license = "MIT"
repository = "https://github.com/latentedge/barsmith"
readme = "../README.md"
rust-version = "1.85.1"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6", features = ["derive"] }
libc = "0.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.5"
chrono = { version = "0.4.41", default-features = false, features = ["std"] }
barsmith_rs = { path = "../barsmith_rs", features = ["simd-eval"] }
barsmith_builtin = { path = "../barsmith_builtin" }

[dev-dependencies]
tempfile = "3.27"
