[package]
name = "barsmith_rs"
version = "0.1.0"
edition = "2024"
description = "Core library for Barsmith: combination enumeration, evaluation, and storage."
license = "MIT"
repository = "https://github.com/latentedge/barsmith"
readme = "../README.md"
rust-version = "1.85.1"

[features]
bench-api = []
simd-eval = []

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.41", default-features = false, features = ["std", "serde"] }
csv = "1.4"
itertools = "0.14"
rayon = "1.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
tracing = "0.1.44"
polars = { version = "0.53", default-features = false, features = ["dtype-slim", "polars-parquet", "strings", "temporal"] }
polars-io = { version = "0.53", default-features = false, features = ["csv", "parquet", "temporal"] }
duckdb = { version = "1.10502", features = ["bundled", "parquet"] }
sha2 = "0.11"
hex = "0.4"
once_cell = "1.21"
ahash = "0.8.12"
smallvec = "1.15"

[dev-dependencies]
tempfile = "3.27"
