[package]
name = "custom_rs"
version = "0.1.0"
edition = "2024"
description = "Rust feature engineering and target preparation for Barsmith combination search."
license = "MIT"
repository = "https://github.com/latentedge/barsmith"
readme = "../README.md"
rust-version = "1.85.1"
publish = false

[features]
bench-api = []

[dependencies]
barsmith_rs = { path = "../barsmith_rs" }
barsmith_indicators = { path = "../barsmith_indicators" }
anyhow = "1.0.102"
polars = { version = "0.53", default-features = false, features = ["dtype-slim", "polars-parquet", "strings", "temporal"] }
polars-io = { version = "0.53", default-features = false, features = ["csv", "parquet", "temporal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.41", default-features = false, features = ["std"] }
tracing = "0.1.44"
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
tempfile = "3.27"
polars = { version = "0.53", default-features = false, features = ["dtype-slim", "polars-parquet", "strings", "temporal"] }
polars-io = { version = "0.53", default-features = false, features = ["csv", "temporal"] }
